# powabase-ai

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  pyproject.toml
.github/workflows/: publish.yml
migrations/: alembic.ini  env.py
migrations/versions/: 0001_baseline.py  0002_add_doc2json_table.py  0003_add_workflow_tables.py  0004_add_workflow_block_logs.py  0005_add_tools_and_react.py  0005_add_workflow_state.py  0006_add_orchestrations.py  0006_add_workflow_schedule.py  0007_add_agent_mcp_servers.py  0007_workflow_block_id_to_uuid.py  0008_add_copilot_tables.py  0008_add_hooks_table.py  0009_add_message_citations_table.py  0010_rename_chunk_id_to_item_id.py  0011_add_orchestration_indexes.py  0012_backfill_workflow_and_copilot_tables.py  0013_add_tool_calls_to_agent_runs.py  0014_add_reasoning_steps_to_agent_runs.py  0015_add_attention_required_status.py  0015b_move_system_keys_to_auto_metadata.py  0016_add_parent_workflow_execution_fk.py  0017_ai_provider_keys.py  0018_add_reasoning_requested_to_orchestration_runs.py  0019_promote_usage_to_typed_cols.py  0020_add_last_dispatched_at_to_indexed_sources.py  0021_add_content_hash_to_sources.py  0022_add_list_pagination_indexes.py  0023_add_list_sources_excluding_kb.py  0024_drop_exa_firecrawl_project_settings.py  0025_lock_ai_schema_class_b.py
src/agentic_project_service/: __init__.py  _alembic_self_heal.py  auth.py  celery.py  db.py  main.py  migrate.py
tests/: _db_safety.py  conftest.py  test_agent_kb.py  test_agent_mcp.py  test_agent_tools.py  test_agents.py  test_ai_classb.py  test_ai_provider_keys_model.py  test_ai_provider_keys_resolver.py  test_ai_provider_keys_routes.py  test_approval_endpoint.py  test_doc2json.py  test_encryption.py  test_health.py  test_hooks_crud.py  test_knowledge_bases.py  test_observability.py  test_on_conflict_last_dispatched_at.py  test_orchestrations.py  test_orchestrations_child_runs.py  test_orchestrations_crud.py  test_reindex_last_dispatched_at.py  test_session_service.py  test_sessions.py  test_sources.py  test_sparse_index_store.py  test_tools_crud.py  test_watchdog_integration.py  test_workflow_agent_block_persistence.py  test_workflows.py
tests/integration/: conftest.py  test_billing_contextvar_propagation.py  test_billing_e2e_ai_on_us.py  test_billing_litellm_call_id.py
tests/route/: test_agent_streaming.py  test_internal_mau_count.py  test_orchestration_session_access.py  test_orchestration_streaming.py
tests/services/: conftest.py  test_knowledge_search_source_limits.py  test_list_params.py
tests/support/: billing.py
tests/unit/: conftest.py  test_agent_final_content.py  test_agents_reasoning_effort.py  test_agents_route_billing.py  test_balance_cache.py  test_balance_cache_soft_cap.py  test_base_vector_store_hnsw_cast.py  test_billing_before_request.py  test_billing_bootstrap.py  test_billing_cloud_adapter.py  test_billing_context.py  test_billing_decorator.py  test_billing_isolation.py  test_billing_litellm_callback.py  test_billing_logger_recoupable_gate.py  test_billing_port.py  test_billing_recoupable_contextvar.py  test_bm25_conditional_indexing.py  test_bm25_load_corpus.py  test_bm25_metadata_sidecar.py  test_bm25_rebuild_from_scratch.py  test_bm25_skip_in_index_source.py  test_bm25_status_field.py  test_build_block_logs.py  test_build_bm25_endpoint.py  (+68 more)
(+74 files in other folders)
